# portsip-softphone-windows

./: .gitignore  CMakeLists.txt  README.md
IUI/: CMakeLists.txt  IUI.cpp  IUI.dsp  IUI.dsw  IUI.h  IUI.rc  IUI_vs2010.sln  IUI_vs2010.vcxproj  IUI_vs2010.vcxproj.filters  IUI_vs2010_Dll.sln  IUI_vs2010_Dll.vcxproj  IUI_vs2010_Dll.vcxproj.filters  IUI_vs2013.sln  IUI_vs2013.vcxproj  IUI_vs2013.vcxproj.filters  IUI_vs2013_Dll.sln  IUI_vs2013_Dll.vcxproj  IUI_vs2013_Dll.vcxproj.filters  IUI_vs2015.sln  IUI_vs2015.vcxproj  IUI_vs2015.vcxproj.filters  IUI_vs2017.sln  IUI_vs2017.vcxproj  IUI_vs2017.vcxproj.filters  IUI_vs2017_Dll.sln  IUI_vs2017_Dll.vcxproj  IUI_vs2017_Dll.vcxproj.filters  RCa15488  ReadMe.txt  libui_sdk_licenses.txt  resource.h  stdafx.cpp  stdafx.h
IUI/Control/: Button.cpp  ColumnHeader.cpp  ComboBox.cpp  DateTimePicker.cpp  HostWnd.cpp  HtmlView.cpp  IMRichTextBox.cpp  IUI - 快捷方式.lnk  Label.cpp  ListView.cpp  ProgressBar.cpp  RepeatButton.cpp  RichTextBox.cpp  ScrollBar.cpp  Slider.cpp  SpinButton.cpp  SplitterBar.cpp  TreeView.cpp  WLWnd.cpp  Window.cpp  Window.rar
IUI/Control/ControlCore/: ControlMember.h  Readme.txt  Win32Global.cpp  Win32Global.h
IUI/Control/ControlCore/Button/: ButtonCore.cpp
IUI/Control/ControlCore/ColumnHeader/: ColumnHeaderCore.cpp
IUI/Control/ControlCore/ComboBox/: ComboBoxCore.cpp
IUI/Control/ControlCore/DateTimePicker/: DateTimePickerCore.cpp
IUI/Control/ControlCore/HtmlView/: HtmlViewCore.cpp
IUI/Control/ControlCore/Label/: LabelCore.cpp
IUI/Control/ControlCore/ListView/: ListViewCore.cpp  Readme.txt
IUI/Control/ControlCore/Menu/: Menu.h  menu.cpp  menuc.cpp  mnchange.cpp  mncreate.cpp  mndraw.cpp  mndstry.cpp  mnkey.cpp  mnloop.cpp  mnpopup.cpp  mnstate.cpp
IUI/Control/ControlCore/ProgressBar/: ProgressBarCore.cpp
IUI/Control/ControlCore/RichTextBox/: IMRichTextBoxCore.cpp  ImageOleCtrl.cpp  OleControlCore.cpp  ProtectedDragSource.cpp  RichTextBoxCore.cpp
IUI/Control/ControlCore/ScrollBar/: ScrollBarCore.cpp
IUI/Control/ControlCore/Slider/: trackbar.cpp
IUI/Control/ControlCore/SpinButton/: SpinButtonCore.cpp
IUI/Control/ControlCore/SplitterBar/: SplitterBarCore.cpp
IUI/Control/ControlCore/Tooltips/: TooltipsCore.cpp
IUI/Control/Layout/: Canvas.cpp  DockPanel.cpp  StackPanel.cpp  TabControl.cpp
IUI/Control/Window/: Tooltips.cpp  UIColorDialog.cpp  UIFileDialog.cpp  UIFontDialog.cpp
IUI/Core/: Animation.cpp  ControlProp.cpp  CreateControls.cpp  DropTargetEx.cpp  DropTargetEx.h  Global.cpp  Global.h  HWLWNDDropTarget.cpp  IUIFont.cpp  IUIImage.cpp  IUIProject.cpp  IUIStringA.cpp  IUIStringW.cpp  JScript.cpp  MemStdioFile.cpp  ParseLanguageFile.cpp  ParseResourceFile.cpp  Render.cpp  ResourceMgr.cpp  ResourceMgr.h  State.cpp  UIParse.cpp  UIVariant.cpp  Utils.cpp  WLWndMgr.cpp  WLWndMgr.h  crit.cpp  tls.cpp
Keeper/: CMakeLists.txt  Keeper.cpp  Keeper.vcxproj  Keeper.vcxproj.filters  ProcessMgr.cpp  ProcessMgr.h  pch.h
Keeper/Common/: BaseThread.cpp  BaseThread.h  CriticalSection.h  TypeDeff.h
PortSIPUC/: AddContactWnd.cpp  AddContactWnd.h  CMakeLists.txt  CommonDef.h  Global.cpp  Global.h  OleAudioCanvasHandler.cpp  OleAudioCanvasHandler.h  OleFileCanvasHandler.cpp  OleFileCanvasHandler.h  OleImageCanvasHandler.cpp  OleImageCanvasHandler.h  OleVideoCanvasHandler.cpp  OleVideoCanvasHandler.h  PopupVideoWnd.cpp  PopupVideoWnd.h  PortGo.aps  PortGo.cpp  PortGo.h  PortGo.rc  PortGo_vs2017.sln  PortGo_vs2017.vcxproj  PortGo_vs2017.vcxproj.filters  TrayMsgWnd.cpp  TrayMsgWnd.h  resource.h  stdafx.cpp  stdafx.h
PortSIPUC/AVPlay/: AVPlayer.cpp  AVPlayer.h
PortSIPUC/Login/: LoginDlg.cpp  LoginDlg.h  LoginLoadingDlg.cpp  LoginLoadingDlg.h  LoginSettingsWnd.cpp  LoginSettingsWnd.h
PortSIPUC/Main/: CallerBarWnd.cpp  CallerBarWnd.h  CallerBarWndMgr.cpp  CallerBarWndMgr.h  EmoticonPageCanvasHandler.cpp  EmoticonPageCanvasHandler.h  EmoticonWnd.cpp  EmoticonWnd.h  InfoWnd.cpp  InfoWnd.h  InfoWndMgr.cpp  InfoWndMgr.h  MainWnd.cpp  MainWnd.h  MeetingWnd.cpp  MeetingWnd.h  MsgHistoryWnd.cpp  MsgHistoryWnd.h  PopupChatDlg.cpp  PopupChatDlg.h  SpeakerDlg.cpp  SpeakerDlg.h  TextChatCanvasHandler.cpp  TextChatCanvasHandler.h
PortSIPUC/Settings/: SettingsApplicationPageHandler.cpp  SettingsApplicationPageHandler.h  SettingsAudioCodecsPageHandler.cpp  SettingsAudioCodecsPageHandler.h  SettingsFrameDlg.cpp  SettingsFrameDlg.h  SettingsLanguagesCanvasHandler.cpp  SettingsLanguagesCanvasHandler.h  SettingsMediaQualityHandler.cpp  SettingsMediaQualityHandler.h  SettingsMiscCanvasHandler.cpp  SettingsMiscCanvasHandler.h  SettingsVideoCodecsPageHandler.cpp  SettingsVideoCodecsPageHandler.h  TreeItemDrag.cpp  TreeItemDrag.h
PortSIPUC/System/: Aes.cxx  Aes.hxx  AesConfig.hxx  BaseThread.cpp  BaseThread.h  ConferenceStatusSubMgr.cpp  ConferenceStatusSubMgr.h  CriticalSection.h  HttpClient.cpp  HttpClient.h  LocalEmojiRes.h  MimeType.cpp  MimeType.h  OnLineStatusMgr.cpp  OnLineStatusMgr.h  RestAPI.cpp  RestAPI.h  Session.cpp  Session.h  Session.h.bak  SystemEx.cpp  SystemEx.h  VoipCallBackEvent.cpp  VoipCallBackEvent.h
PortSIPUC/Utility/: BitmapHelper.cpp  BitmapHelper.h  DynamicText.cpp  DynamicText.h  utility.cxx  utility.hxx
PortSIPUC/db/: AVCodec.cpp  AVCodec.h  CallHistory.cpp  CallHistory.h  ChatRecord.cpp  ChatRecord.h  Contact.cpp  Contact.h  DBParam.h  Options.cpp  Options.h  TalkGroup.cpp  TalkGroup.h  TalkGroupNumber.cpp  TalkGroupNumber.h  User.cpp  User.h  VARecord.cpp  VARecord.h  VoiceMail.cpp  VoiceMail.h  portsql.cpp  portsql.hxx
PortSIPUC/include/PortSIPLib/: PortSIPErrors.hxx  PortSIPTypes.hxx  portsipuc.hxx
PortSIPUC/include/flatbuffers/: util.h
PortSIPUC/include/log4cplus/: config.hxx  hierarchylocker.h  tchar.h  version.h
PortSIPUC/lib/: ExportClass.lib  ExportClass1.lib  libdisasm.lib  libdisasmd.lib  readme.txt
PortSIPUC/lib/libvlc_lib/: libvlc.la  libvlc.lib  libvlccore.la  libvlccore.lib
PortSIPUC/lib/x86/: icutest.lib  libcurl_a.lib  libjson.lib  libjsoncpp.lib  log4cplusU.lib  log4cplusUD.lib  portsip_uc_sdk.lib  sqlite3.lib
PortSIPUC/log/: Logger.cpp  Logger.h
(+302 files in other folders)
