#CMake最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.13.0 FATAL_ERROR)
#项目名称
PROJECT(PortGoClient)
#CMake模块文件路径
SET(CMAKE_MODULE_PATH 
	${CMAKE_SOURCE_DIR}/..
	${CMAKE_MODULE_PATH}
)

# 生成文件的路径
SET(BIN_DIR ${CMAKE_BINARY_DIR}/PortSIPUC/bin)
SET(LIB_DIR ${CMAKE_SOURCE_DIR}/PortSIPUC/lib)
SET(CMD_DIR ${CMAKE_BINARY_DIR}/cmake)

MESSAGE(STATUS " LIB_DIR Path, " ${LIB_DIR}) 
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS On)

SET(LIBRARY_OUTPUT_PATH ${LIB_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${BIN_DIR})

## 工程采用Unicode
#ADD_DEFINITIONS(-D_UNICODE -DUNICODE)

## 全局Include路径
INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}
	${PROJECT_BINARY_DIR}		
)
##lib搜索路径
LINK_DIRECTORIES(
	${LIB_DIR}
)
## 项目
#ADD_SUBDIRECTORY("jsoncpp")
ADD_SUBDIRECTORY("Keeper")
#ADD_SUBDIRECTORY("IUI")
ADD_SUBDIRECTORY("PortSIPUC")
#ADD_SUBDIRECTORY("sqlite3")
