# 版本限定
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)                      

# 项目名称
PROJECT(Keeper)

#ADD_DEFINITIONS(-D_MBCS)


# 设置编译器选项：O3优化，显示所有警告
SET(CMAKE_C_FLAGS "$ENV{CFLAGS} -O3 -Wall") 

# 定义头文件的路径变量
SET(BASE_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/Common) 
MESSAGE(STATUS "Include Path, ${BASE_INCLUDE_PATH}") 

SET(INCLUDE_PATH ${PROJECT_SOURCE_DIR}) 
MESSAGE(STATUS "Include Path, ${INCLUDE_PATH}") 

# 定义源文件路径变量
SET(BASE_SOURCE_PATH ${PROJECT_SOURCE_DIR}/Common) 
MESSAGE(STATUS "Source Path , ${BASE_SOURCE_PATH}") 

SET(SOURCE_PATH ${PROJECT_SOURCE_DIR}) 
MESSAGE(STATUS "Source Path , ${SOURCE_PATH}") 


# 包含头文件路径
INCLUDE_DIRECTORIES(${BASE_INCLUDE_PATH}) 
INCLUDE_DIRECTORIES(${INCLUDE_PATH}) 


# 添加源文件路径下所有源文件存放到变量中(*.c && *.cpp)，当然也可以手动一个个文件添加进来
AUX_SOURCE_DIRECTORY(${BASE_SOURCE_PATH} SRC_LIST) 
AUX_SOURCE_DIRECTORY(${SOURCE_PATH} SRC_LIST) 
# 设置动态库输出路径
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin) 
MESSAGE(STATUS "Library Output Path, " ${PROJECT_BINARY_DIR/bin}) 

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../PortSIPUC/bin)


# 生成可执行文件
ADD_EXECUTABLE(Keeper ${SRC_LIST})

TARGET_LINK_LIBRARIES(Keeper Shlwapi.lib)